--- a/app/views/friend_invitations/index.html.erb
+++ b/app/views/friend_invitations/index.html.erb
@@ -9,7 +9,7 @@
   </tr>
   <% for friend_inv in @friend_invitations %>
     <tr>
-      <td><%= small_user_image_link friend_inv.applier%></td>
+      <td><%= user_image_link friend_inv.applier, :thumb => :small%></td>
       <td><%=friend_inv.apply_date.to_s(:db) %></td>
       <td>
         <%= link_to h(friend_inv.applier.nickname), user_view_path(friend_inv.applier) %>希望和你成为朋友
