--- a/app/views/layouts/match_layout.html.erb
+++ b/app/views/layouts/match_layout.html.erb
@@ -18,8 +18,8 @@
 <div id="main_content">
   <div id="header" class="match_header">
     <a id="site_link" href="/"></a>
-    <%= link_to small_team_image_tag(@match.host_team, :class=>''), team_view_path(@match.host_team), :id=>"host_header_icon" %>
-    <%= link_to small_team_image_tag(@match.guest_team, :class=>''), team_view_path(@match.guest_team), :id=>"guest_header_icon" %>
+    <%= link_to team_image_tag(@match.host_team, :thumb=>:small, :class=>''), team_view_path(@match.host_team), :id=>"host_header_icon" %>
+    <%= link_to team_image_tag(@match.guest_team, :thumb=>:small, :class=>''), team_view_path(@match.guest_team), :id=>"guest_header_icon" %>
     <%= render(:partial => 'layouts/header_setting')%>
     <%= render(:partial => 'layouts/match_menu', :locals => {:match => @match})%>
 
