--- a/app/views/site_posts/_post.html.erb
+++ b/app/views/site_posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="post">
 <%if post.user_id%>
-  <%=small_user_image_link(post.user)%>
+  <%=user_image_link(post.user, :thumb => :small)%>
 <%else%>
   <%= image_tag 'default_user_small.gif', :class=>"icon", :title=>''%>
 <%end%>
