--- a/app/views/team_join_requests/index_user.html.erb
+++ b/app/views/team_join_requests/index_user.html.erb
@@ -9,7 +9,7 @@
     </tr>
     <% for req in @requests %>
       <tr>
-        <td><%= small_user_image_link req.user%></td>
+        <td><%= user_image_link req.user, :thumb => :small%></td>
         <td><%=req.apply_date.to_s(:db) %></td>
         <td>
           <%= link_to h(req.user.nickname), user_view_path(req.user) %>申请加入<%= link_to h(req.team.shortname), team_view_path(req.team) %>
