--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -1,8 +1,7 @@
 <%if !logged_in?%>
 <div id="welcome">
   <%= image_tag('wf_light.gif', :title=>'wefootball')%>
-  <div class="title">&nbsp;&nbsp;- 让我们一起，以足球的名义</div>
-  <div class="cb"></div>
+  <span class="title">&nbsp;&nbsp;- 让我们一起，以足球的名义</span>
 	<div class="exp">
     WeFootball可以帮助你和你的球队方便地安排、记录比赛训练<br/><br/>你在这里也可以找到一块儿踢球的朋友
   </div>
@@ -13,6 +12,10 @@
   <div class="sect">
     <h2>WeFootball公告</h2>    
     <div class="notification">
+      <span style="font-weight:700">为身处灾区的同胞们祈福</span>
+      <br/><br/>
+      <span style="font-weight:700">面对灾害，我们心在一起</span>
+      <hr />
       <%= link_to '了解一下WeFootball能做些什么？', site_about_path%>
       <br/><br/>
       预告：<a href="http://blog.wefootball.org/2008/5/11/12">看球功能即将推出</a> - 05.11
@@ -22,8 +25,6 @@
       球队讨论<a href="http://blog.wefootball.org/2008/5/7/9">支持RSS订阅</a> - 05.07
       <br/><br/>
       个人和球队的近期活动已<a href="http://blog.wefootball.org/2008/5/7/9">支持iCalendar格式</a> - 05.07
-      <br/><br/>
-      <%= link_to '关于我们', site_about_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
       <br/><br/>
       要给WeFootball提提建议？ 请到<%= link_to '站务论坛', site_posts_path%>留言
     </div>
