--- a/app/views/offical_teams/index.html.erb
+++ b/app/views/offical_teams/index.html.erb
@@ -5,4 +5,12 @@
   <%= will_paginate @offical_teams %>
 </div>
 
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '新建球队', new_offical_team_path %>
+    </li>
+  </ul>
+</div>
 <div class="cb"></div>
