--- a/app/views/offical_matches/edit.html.erb
+++ b/app/views/offical_matches/edit.html.erb
@@ -1,12 +1,11 @@
-<h1>Editing offical_match</h1>
-
-<%= error_messages_for :offical_match %>
-
-<% form_for(@offical_match) do |f| %>
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @offical_match %> |
-<%= link_to 'Back', offical_matches_path %>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <%= error_messages_for :offical_match %>
+  
+  <% form_for @offical_match do |f| -%>
+    <%= render :partial => "form", :locals=>{:f=> f}%>
+    <p><%= submit_tag '修改' %></p>
+  <% end -%>
+</div>
+  
+<div class="cb"></div>
