--- a/app/views/offical_matches/new.html.erb
+++ b/app/views/offical_matches/new.html.erb
@@ -3,19 +3,8 @@
   <%= error_messages_for :offical_match %>
   
   <% form_for @offical_match do |f| -%>
-    <p><label>主队</label><br/>
-    <%= f.select :host_offical_team_id, (OfficalTeam.find :all).map {|t| [h(t.name), t.id] } %>
-    
-    <p><label>客队</label><br/>
-    <%= f.select :guest_offical_team_id, (OfficalTeam.find :all).map {|t| [h(t.name), t.id] } %>
-  
-    <p><label>时间</label><br/>
-    <%= f.datetime_select :start_time, :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 %></p>
-    
-    <p><label>地点</label><br/>
-    <%= f.text_field :location, :maxlength=>100, :size=>30%></p>
-
-  <p><%= submit_tag '创建' %></p>
+    <%= render :partial => "form", :locals=>{:f=> f}%>
+    <p><%= submit_tag '创建' %></p>
   <% end -%>
 </div>
   
