--- a/app/views/offical_teams/index.html.erb
+++ b/app/views/offical_teams/index.html.erb
@@ -1,6 +1,6 @@
 <div id="wide_left_content" class="sect">
   <h2><%=h @title%></h2>
-  <%= offical_team_icon(@offical_teams)%>
+  <%= offical_team_icon(@offical_teams, true)%>
   <div class="cb"></div>
   <%= will_paginate @offical_teams %>
 </div>
