--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -57,7 +57,7 @@
   <%if !@match.description.blank?%>
   <div class="sect">
       <h2>比赛说明</h2>
-      <p><%=simple_format auto_link(h(@match.description), :urls)%></p>
+      <%=simple_format auto_link(h(@match.description), :urls)%>
   </div>
   <%end%>
   
