--- a/app/views/layouts/_search_panel.html.erb
+++ b/app/views/layouts/_search_panel.html.erb
@@ -12,7 +12,7 @@
     :url=>search_teams_path,
     :text=>'搜索队伍'}
 }%>
-<% form_tag search_paths[default][:url], :method=>:post, :id=>"header_search" do%>
+<% form_tag search_paths[default][:url], :method=>:get, :id=>"header_search" do%>
   <table><tr>
   <td class="dropdown_container">
     <%= search_paths[default][:image]%><%=image_tag 'search_down.gif', :title=>''%>
@@ -24,7 +24,7 @@
       <%end%>
     </div>
   </td>
-  <td><%= text_field_tag 'q', search_paths[default][:text], :size=>21, :class=>'input blurinput' %></td>
-  <td><%= submit_tag '', :class=>"submit search", :title=>'搜索' %></td>
+  <td class="input"><%= text_field_tag 'q', search_paths[default][:text], :class=>'input blurinput' %></td>
+  <td><%= submit_tag '', :class=>"submit search", :title=>'搜索', :name=>'' %></td>
   </tr></table>
 <%end%>
