--- a/app/views/offical_matches/show.html.erb
+++ b/app/views/offical_matches/show.html.erb
@@ -3,7 +3,7 @@
     <h2><%=h @title%></h2>
     <table class="om">
     <tr>
-      <td><%= offical_team_icon(@offical_match.host_team, @is_editor)%></td>
+      <td><%= offical_team_icon(@offical_match.host_team)%></td>
       <td class="detail">
         <div class="om_result">
           <%if @offical_match.finished? && !@offical_match.host_team_goal.nil? && !@offical_match.guest_team_goal.nil?%>
@@ -19,7 +19,7 @@
         <span>时间: </span><%= @offical_match.start_time.strftime("%m月%d日 %H:%M")%><br />
         <span>地点: </span><%= @offical_match.location %>
       </td>
-      <td><%= offical_team_icon(@offical_match.guest_team, @is_editor)%></td>
+      <td><%= offical_team_icon(@offical_match.guest_team)%></td>
     </tr>
     </table>
     <%if @is_editor%> 
