--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,28 +1,26 @@
-<p>
-  <b>Start time:</b>
-  <%=h @watch.start_time %>
-</p>
-
-<p>
-  <b>Location:</b>
-  <%=h @watch.location %>
-</p>
-
-<p>
-  <b>Official match:</b>
-  <%=h @watch.official_match_id %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%=h @watch.user_id %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%=h @watch.description %>
-</p>
-
-
-<%= link_to 'Edit', edit_watch_path(@watch) %> |
-<%= link_to 'Back', watches_path %>
+<div id="wide_left_content" class="sect">
+  <div class="sect">
+    <h2><%=h @title%></h2>
+    <table class="om">
+    <tr>
+      <td><%= official_team_icon(@official_match.host_team)%></td>
+      <td class="detail">
+        <div class="om_result">
+          <%if @official_match.finished? && !@official_match.host_team_goal.nil? && !@official_match.guest_team_goal.nil?%>
+            <%if @official_match.pk?%>
+              <%= @official_match.host_team_goal%>(<%= @official_match.host_team_pk_goal%>)
+              :
+              <%= @official_match.guest_team_goal%>(<%= @official_match.guest_team_pk_goal%>)
+            <%else%>
+              <%= @official_match.host_team_goal%> : <%= @official_match.guest_team_goal%>
+            <%end%>
+          <%end%>
+        </div>
+        <span>时间: </span><%= @official_match.start_time.strftime("%m月%d日 %H:%M")%><br />
+        <span>地点: </span><%= @official_match.location %>
+      </td>
+      <td><%= official_team_icon(@official_match.guest_team)%></td>
+    </tr>
+    </table>
+  </div>
+</div>
