--- a/app/views/match_reviews/show.html.erb
+++ b/app/views/match_reviews/show.html.erb
@@ -23,7 +23,10 @@
 </div>
 
 <div id="narrow_right_content">
-  <h2></h2>
+  <h2>比赛信息</h2>
+  <div class="sect mreview_minfo">
+    <%=render :partial=>'match_reviews/match_info'%>
+  </div>
   <%=render :partial=>'match_reviews/sidebar_menu'%>
 </div>
 <div class="cb"></div>
