--- a/app/views/match_reviews/_match_review_list_by_user.html.erb
+++ b/app/views/match_reviews/_match_review_list_by_user.html.erb
@@ -1,6 +1,10 @@
-<% for mr in match_review_list %>
+<% for mr in match_review_list_by_user %>
   <div class="mreview">
-    <%=user_image_link(mr.user, :thumb => :small)%>
+    <%host_team_icon, guest_team_icon = team_image_tags_of_match mr.match, {:class=>'icon host_icon'}, {:class=>'icon guest_icon'}%>
+    <div class="match_icons">
+      <%=host_team_icon%>
+      <%=guest_team_icon%>
+    </div>
     <div class="content">
       <span class="title"><%=link_to h(mr.title), match_review_path(mr)%></span>
       <span class="match_link"><%=link_to "#{h(mr.match.host_team_name)} V.S. #{h mr.match.guest_team_name}", mr.match%></span>
