--- a/app/views/official_matches/edit.html.erb
+++ b/app/views/official_matches/edit.html.erb
@@ -8,4 +8,12 @@
   <% end -%>
 </div>
   
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '返回比赛', @official_match %>
+    </li>
+  </ul>
+</div>
 <div class="cb"></div>
