--- a/app/views/official_matches/show.html.erb
+++ b/app/views/official_matches/show.html.erb
@@ -6,18 +6,12 @@
       <td><%= official_team_icon(@official_match.host_team)%></td>
       <td class="detail">
         <div class="om_result">
-          <%if @official_match.finished? && !@official_match.host_team_goal.nil? && !@official_match.guest_team_goal.nil?%>
-            <%if @official_match.pk?%>
-              <%= @official_match.host_team_goal%>(<%= @official_match.host_team_pk_goal%>)
-              :
-              <%= @official_match.guest_team_goal%>(<%= @official_match.guest_team_pk_goal%>)
-            <%else%>
-              <%= @official_match.host_team_goal%> : <%= @official_match.guest_team_goal%>
-            <%end%>
-          <%end%>
+          <%=@official_match.result_text%>
         </div>
         <span>时间: </span><%= @official_match.start_time.strftime("%m月%d日 %H:%M")%><br />
-        <span>地点: </span><%= @official_match.location %>
+        <%if !@official_match.location.blank?%>
+          <span>地点: </span><%= @official_match.location %>
+        <%end%>
       </td>
       <td><%= official_team_icon(@official_match.guest_team)%></td>
     </tr>
