--- a/app/views/official_teams/edit.html.erb
+++ b/app/views/official_teams/edit.html.erb
@@ -26,4 +26,13 @@
   </div>
 </div>
 
+  
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '返回球队列表', official_teams_path %>
+    </li>
+  </ul>
+</div>
 <div class="cb"></div>
