--- a/app/views/official_teams/new.html.erb
+++ b/app/views/official_teams/new.html.erb
@@ -6,5 +6,14 @@
     <p><%= submit_tag '创建' %></p>
   <% end -%>
 </div>
+
   
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '返回球队列表', official_teams_path %>
+    </li>
+  </ul>
+</div>
 <div class="cb"></div>
