--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -33,7 +33,7 @@
 <%elsif activity.class == SidedMatch%>
 <div class="activity match_activity">
   <div class="content">
-    <%= link_to(h(activity.host_team.shortname), team_view_path(activity.host_team_id))%>
+    <%= link_to(h(activity.host_team_name), team_view_path(activity.host_team_id))%>
     对阵
     <%=h activity.guest_team_name%>
     <br/><br/>
@@ -55,7 +55,7 @@
   <div class="activity_icon">
     <%= team_image_link activity.host_team, :thumb=>:small, :class=>"host_icon" %>
     <div class="vs" title="V.S."></div>
-    <%= image_tag('default_user_small.gif', :title=>activity.guest_team_name, :class=>"guest_icon") %>
+    <%= team_image_tag Team.new(:shortname => activity.guest_team_name), :thumb=>:small, :class=>"guest_icon" %>
   </div>
 </div>
 <%elsif activity.class == Play%>
@@ -89,9 +89,9 @@
 <%belongs_to_both_teams = display_status && current_user.is_team_member_of?(activity.host_team_id) && current_user.is_team_member_of?(activity.guest_team_id)%>
 <div class="activity match_activity <%= 'match_activity_wide' if belongs_to_both_teams%>">
   <div class="content">
-    <%= link_to(h(activity.host_team.shortname), team_view_path(activity.host_team_id))%>
+    <%= link_to(h(activity.host_team_name), team_view_path(activity.host_team_id))%>
     对阵
-    <%= link_to(h(activity.guest_team.shortname), team_view_path(activity.guest_team_id))%>
+    <%= link_to(h(activity.guest_team_name), team_view_path(activity.guest_team_id))%>
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, activity.football_ground_id%>
