--- a/app/views/layouts/match_layout.html.erb
+++ b/app/views/layouts/match_layout.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <title><%=h @title ? @title : h("#{@match.host_team.shortname} v.s. #{@match.guest_team.shortname}")%></title>
+  <title><%=h @title ? @title : h("#{@match.host_team.shortname} V.S. #{@match.guest_team.shortname}")%></title>
   <%= stylesheet_link_tag 'wefootball' %>
   <%= yield :stylesheet%>
   <%= javascript_include_tag "jquery-1.2.3/jquery-1.2.3.min.js" %>
