--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -128,28 +128,14 @@
         
 <div id="narrow_right_content">
   <div class="sect">
-    <h2>参加这场比赛的人</h2>
-    <%if @joined_users.length <= SidedMatchesController::JOINED_USER_LIST_LENGTH%>
-        <%= user_icon(@joined_users)%>
-    <%else%>
-        <%@joined_users.pop%>
-        <%= user_icon(@joined_users)%>
-        <div class="cb"></div>
-        <%= link_to "> 更多",joined_users_sided_match_path(@match.id), :class=>"more" %>
-    <%end%>
+    <h2>参加这场比赛的人 <%= link_to "(更多...)",joined_users_sided_match_path(@match.id)%></h2>
+    <%= user_icon(@joined_users)%>
     <div class="cb"></div>
   </div>
          
   <div class="sect">
-    <h2>没表态是否参加的人</h2>
-    <%if @undetermined_users.length <= SidedMatchesController::UNDETERMINED_USER_LIST_LENGTH%>
-        <%= user_icon(@undetermined_users)%>
-    <%else%>
-        <%@undetermined_users.pop%>
-        <%= user_icon(@undetermined_users)%>
-        <div class="cb"></div>
-        <%= link_to "> 更多",undetermined_users_sided_match_path(@match.id), :class=>"more" %>
-    <%end%>
+    <h2>没表态是否参加的人 <%= link_to "(更多...)",undetermined_users_sided_match_path(@match.id)%></h2>
+    <%= user_icon(@undetermined_users)%>
     <div class="cb"></div>
   </div>
 
