--- a/app/views/calendar/_calendar.html.erb
+++ b/app/views/calendar/_calendar.html.erb
@@ -26,22 +26,11 @@
         </span>
       </div>
       <div class="monthDayBottomDiv">
-        <% das = activities[date.strftime("%Y-%m-%d")] %>
-        <% if !das.nil?%>
-        <% das.slice(0, 5).each do |act| %>
-          <%if act.class == Training
-              img_link = training_icon_link(act)
-            elsif act.class == Match
-              img_link = match_icon_link(act)
-            elsif act.class == SidedMatch
-              img_link = sided_match_icon_link(act)
-            elsif act.class == Play
-              img_link = play_icon_link(act)
-            end%>
-          <%= img_link%>
+        <% das = activities[date.strftime("%Y-%m-%d")].nil? ? [] : activities[date.strftime("%Y-%m-%d")]
+         das.slice(0, 5).each do |act|%>
+          <%= activity_icon(act)%>
         <%end%>
         <%= day_calendar_link("更多", date, @user || @team, :class=>"more") if das.length > 5%>
-        <%end%>
       </div>
     </div>
   <% date = date.tomorrow %>
