--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -9,9 +9,9 @@
         <%if logged_in?%>
           <br />
           <span>我的状态: </span>
-          <%= join_status_text @play%>&nbsp;&nbsp;&nbsp;
+          <%= @play.join_status_text current_user%>&nbsp;&nbsp;&nbsp;
           <%links = []%>
-          <% links_text = join_status_links @play%>
+          <% links_text = @play.join_links_text current_user%>
           <% links << link_to(links_text[0], play_play_joins_path(@play), :method=>'post') if @play.can_be_joined_by?(current_user)%>
           <% links << link_to(links_text[1], play_play_join_path(@play, 0), :method=>'delete') if @play.can_be_quited_by?(current_user)%>
           <%= links_with_sticks links%>
