--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -4,14 +4,14 @@
     <div class="activities">
         <%=date_div_link @match.start_time, @match.host_team%>
         <div class="detail">
-          <%if @match.is_after_match?%>
+          <%if @match.finished?%>
             <% tmp = display_sided_match_result @match%>
             <%if !tmp.nil?%>
               <div class="sided_match_result"><%=tmp%></div>
             <%end%>
           <%end%>
           <span>对阵球队: </span><%=h @match.guest_team_name%><br />
-          <%if @match.is_after_match?%>
+          <%if @match.finished?%>
             <span>比赛结果: </span><%=sided_match_result_text @match%><br />
           <%end%>
           <span>时间: </span><%= @match.start_time.strftime("%H:%M")%>-<%=@match.end_time.strftime("%H:%M")%><br />
@@ -24,9 +24,9 @@
           <%if logged_in? && current_user.is_team_member_of?(@match.team)%>
             <br />
             <span>我的状态: </span>
-            <%= join_status_text @match%>&nbsp;&nbsp;&nbsp;
+            <%= @match.join_status_text current_user%>&nbsp;&nbsp;&nbsp;
             <%links = []%>
-            <% links_text = join_status_links @match%>
+            <% links_text = @match.join_links_text current_user%>
             <% links << link_to(links_text[0], sided_match_sided_match_joins_path(@match), :method=>'post') if @match.can_be_joined_by?(current_user)%>
             <% links << link_to(links_text[1], sided_match_sided_match_join_path(@match, 0), :method=>'delete') if @match.can_be_quited_by?(current_user)%>
             <%= links_with_sticks links%>
@@ -61,7 +61,7 @@
   </div>
   <%end%>
   
-  <%if @match.is_after_match? && !@team_goals.empty?%>
+  <%if @match.finished? && !@team_goals.empty?%>
   <div class="sect">
     <h2>进球</h2>
     <%links = []%>
