--- a/app/views/posts/_many_teams_post_list.html.erb
+++ b/app/views/posts/_many_teams_post_list.html.erb
@@ -11,7 +11,7 @@
 <% for post in many_teams_post_list %>
   <tr>
     <td><%=post_icon_link post%></td>
-    <td><%=link_to h(post.title), post  %><%="<span class='private'>&nbsp;&nbsp;-&nbsp;&nbsp;(仅队内可见)</span>" if post.is_private%></td>
+    <td><%=link_to h(post.title), post_path(post)  %><%="<span class='private'>&nbsp;&nbsp;-&nbsp;&nbsp;(仅队内可见)</span>" if post.is_private%></td>
     <td><%=link_to h(post.team.shortname), team_view_path(post.team) %></td>
     <td><%=h post.user.nickname %></td>
     <td><%= post.replies.size %></td>
