--- a/app/views/posts/_sidebar_menu.html.erb
+++ b/app/views/posts/_sidebar_menu.html.erb
@@ -2,49 +2,43 @@
 
   <% if logged_in? && current_user.is_team_member_of?(@team)%>
     <li <%= selected_class_sidebar_menu_item(:action=>'new')%>> 
-    <% if @training%>
-        > <%= link_to '针对本次训练发言', new_training_post_path(@training) %>
-    <% elsif @sided_match%>
-        > <%= link_to '针对本场比赛发言', new_sided_match_post_path(@sided_match) %>
-    <% elsif @match%>
-        > <%= link_to '针对本场比赛发言', new_match_team_post_path(@match, @team) %>
+    <% case @activity 
+     when Training %>
+        > <%= link_to '针对本次训练发言', new_training_post_path(@activity) %>
+    <% when SidedMatch %>
+        > <%= link_to '针对本场比赛发言', new_sided_match_post_path(@activity) %>
+    <% when Match %>
+        > <%= link_to '针对本场比赛发言', new_match_team_post_path(@activity, @team) %>
     <% else%>
         > <%= link_to '发言', new_team_post_path(@team) %>
     <%end%>
     </li>
   <%end%>
   
-  <% if @training %>
+  <% case @activity 
+     when Training %>
     <li <%= selected_class_sidebar_menu_item(:action=>'index')%>>
-    > <%= link_to '本次训练的讨论', training_posts_path(@training) %>
+    > <%= link_to '本次训练的讨论', training_posts_path(@activity) %>
+    </li>
+  <% when SidedMatch %>
+    <li <%= selected_class_sidebar_menu_item(:action=>'index')%>>
+    > <%= link_to '本场比赛的讨论', sided_match_posts_path(@activity) %>
+    </li>
+  <% when Match %>
+    <li <%= selected_class_sidebar_menu_item(:action=>'index')%>>
+    > <%= link_to '本场比赛的讨论', match_team_posts_path(@activity, @team) %>
     </li>
   <%end%>
   
-  <% if @sided_match %>
-    <li <%= selected_class_sidebar_menu_item(:action=>'index')%>>
-    > <%= link_to '本场比赛的讨论', sided_match_posts_path(@sided_match) %>
-    </li>
-  <%end%>
-  
-  <% if @match %>
-    <li <%= selected_class_sidebar_menu_item(:action=>'index')%>>
-    > <%= link_to '本场比赛的讨论', match_team_posts_path(@match, @team) %>
-    </li>
-  <%end%>
-  
-  <li <%= selected_class_sidebar_menu_item(:action=>'index', :boolean=>!@match && !@training && !@sided_match)%>>
+  <li <%= selected_class_sidebar_menu_item(:action=>'index', :boolean=>!@activity)%>>
   > <%= link_to '球队讨论区', team_posts_path(@team) %>
   </li>
     
   <li class="seperate">
   </li>
-    <% if @training %>
-      <li> > <%= link_to '返回训练详情', training_path(@training) %></li>
-    <%elsif @sided_match%>
-      <li> > <%= link_to '返回比赛详情', sided_match_path(@sided_match) %></li>
-    <%elsif @match%>
-      <li> > <%= link_to '返回比赛详情', match_path(@match) %></li>
-    <%end%>
+  <% if @activity %>
+    <li> > <%= link_to "返回#{@activity.img_title}详情", @activity %></li>
+  <%end%>
   <li>
     > <%= link_to '返回球队首页', team_view_path(@team) %>
   </li>
